# carbonara

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
src/: energy.rs  lib.rs
