[package]
name = "carbonara"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Calculate co2 Emmisions using https://www.green-coding.io/co2-formulas/"
repository = "https://github.com/sevki/carbonara"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
okstd = { version = "0.1.10", features = ["macros", "argh"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
uom = { version = "0.36.0", features = ["serde"] }

[[bin]]
name = "energy"
path = "src/energy.rs"

[[bin]]
name = "cargo-energy"
path = "src/energy.rs"
